fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
-  background-color: #F1EFFA;
+  background-color: #ADB0FB;
 }
 
 code {
@@ -15,5 +15,16 @@ code {
 html, 
 body,
 #root {
-    height: 100%;
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+* {
+  box-sizing: border-box;
 }
